싱글톤 패턴 수정, 변수 이름 리팩토링